--- a/app/src/main/res/layout/rv_item_incident_type.xml
+++ b/app/src/main/res/layout/rv_item_incident_type.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:padding="8dp"
+    android:layout_marginEnd="8dp"
     app:cornerRadius="12dp"
     android:theme="@style/Theme.TrafficFlow"
     android:clickable="true"
