--- a/app/src/main/res/layout/rv_item_incident_type.xml
+++ b/app/src/main/res/layout/rv_item_incident_type.xml
@@ -13,7 +13,7 @@
     android:focusable="true"
     android:background="?android:attr/selectableItemBackground">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imageIncident"
         android:layout_width="90dp"
         android:layout_height="90dp"
@@ -24,6 +24,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
+        app:shapeAppearanceOverlay="@style/RoundedImageView"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
