report incident with location coordinates, edit profile and more.

--- a/app/src/main/res/layout/bottom_sheet_account.xml
+++ b/app/src/main/res/layout/bottom_sheet_account.xml
@@ -70,6 +70,7 @@
             android:background="?android:attr/listDivider" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/menuEditProfile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?android:attr/selectableItemBackground"
@@ -97,7 +98,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_weight="1"
-                android:text="Edit Account"
+                android:text="Edit Profile"
                 android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView2"
@@ -105,6 +106,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/menuRecentTrips"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="?android:attr/selectableItemBackground"
