--- a/app/src/main/res/layout/bottom_sheet_incident_details.xml
+++ b/app/src/main/res/layout/bottom_sheet_incident_details.xml
@@ -157,37 +157,40 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="32dp"
             android:orientation="horizontal"
             android:paddingTop="12dp"
-            android:paddingBottom="32dp"
+            android:paddingBottom="12dp"
+            android:weightSum="2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/incidentFalseReportsLayout">
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip4"
-                android:layout_width="wrap_content"
+            <Button
+                android:id="@+id/btnViewReports"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginEnd="12dp"
+                android:layout_margin="12dp"
                 android:layout_weight="1"
+                android:backgroundTint="@color/colorOnBackground_light"
+                android:elevation="0dp"
                 android:text="View Reports"
-                android:textAlignment="center" />
+                android:textColor="@color/colorOnBackground_dark"
+                app:cornerRadius="99dp" />
 
             <Button
-                android:id="@+id/buttonReport"
-                android:layout_width="wrap_content"
+                android:id="@+id/btnReport"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginEnd="12dp"
+                android:layout_margin="12dp"
                 android:layout_weight="1"
+                android:backgroundTint="@color/error"
+                android:elevation="0dp"
+                android:singleLine="true"
                 android:text="Report"
-                android:textColor="@color/background_dark"
                 app:cornerRadius="100dp"
-                app:icon="@drawable/ic_report"
-                app:iconTint="@color/background_dark" />
+                app:icon="@drawable/ic_report" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
