--- a/app/src/main/res/layout/bottom_sheet_report.xml
+++ b/app/src/main/res/layout/bottom_sheet_report.xml
@@ -72,7 +72,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
                 android:paddingVertical="16dp"
-                android:text="Report Road Incidents"
+                android:text="Add Road Incidents"
                 android:textSize="18sp"
                 android:textStyle="bold" />
         </LinearLayout>
