--- a/app/src/main/res/drawable/trip_switch_background.xml
+++ b/app/src/main/res/drawable/trip_switch_background.xml
@@ -3,7 +3,7 @@
 
     <item android:state_checked="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/secondary" />
+            <solid android:color="@color/colorOnBackground_dark" />
         </shape>
     </item>
 </selector>
